// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateReplyEvent/> render should render a \`Responded via Facebook Messenger\` event 1`] = `
<div
  class="component last"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Responded via Facebook Messenger
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div>
        AgentLabel
      </div>
      <div>
        <span
          class="separator"
        >
          -
        </span>
        <span
          class="ticketLink"
        >
          <a
            href="184"
            rel="noopener noreferrer"
            target="_blank"
          >
            View ticket
          </a>
        </span>
      </div>
    </div>
    <span
      class="date text-faded"
    >
      <span
        id="datetime-tooltip-1"
      >
        04/27/2021
      </span>
    </span>
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responded via Facebook Messenger\` event even if the payload is missing source, sender and meta data 1`] = `
<div
  class="component last"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Responded via Facebook Messenger
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div>
        AgentLabel
      </div>
      <div>
        <span
          class="separator"
        >
          -
        </span>
        <span
          class="ticketLink"
        >
          <a
            href="184"
            rel="noopener noreferrer"
            target="_blank"
          >
            View ticket
          </a>
        </span>
      </div>
    </div>
    <span
      class="date text-faded"
    >
      <span
        id="datetime-tooltip-7"
      >
        04/27/2021
      </span>
    </span>
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responded via Instagram Direct Message\` event 1`] = `
<div
  class="component last"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Responded via Instagram Direct Message
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div>
        AgentLabel
      </div>
    </div>
    <span
      class="date text-faded"
    >
      <span
        id="datetime-tooltip-4"
      >
        04/27/2021
      </span>
    </span>
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responding to a Facebook comment\` event 1`] = `
<div
  class="component last"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Responding to a Facebook comment
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div>
        AgentLabel
      </div>
    </div>
    <span
      class="date text-faded"
    >
      <span
        id="datetime-tooltip-2"
      >
        04/27/2021
      </span>
    </span>
  </div>
  <div
    class="eventDetails"
  >
    <div
      class="genericCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="m-0 row"
        >
          <div
            class="avatarContainer col-md-1"
          >
            <div
              class="component square"
              style="width: 36px; height: 36px;"
            >
              <div
                class="initials"
                style="width: 36px; height: 36px; font-size: 15px;"
              >
                <span
                  style="line-height: 38px;"
                >
                  MD
                </span>
              </div>
            </div>
          </div>
          <div
            class="col-md-11"
          >
            <div
              class="row"
            >
              <div
                class="col-md-7"
              >
                <div
                  class="verticalCenter"
                >
                  <div
                    class="customerNameBody"
                  >
                    Mehdi
                     
                    LA J
                  </div>
                  <div>
                    <span
                      class="source"
                    >
                      <i
                        class="icon source-icon d-inline-block icon-custom icon-facebook-feed uncolored"
                      />
                    </span>
                  </div>
                  <div>
                    <span
                      class="from"
                    >
                      <span
                        class="label"
                      >
                        go to
                         
                      </span>
                      <span
                        class="value"
                      >
                        <a
                          href="https://facebook.com/657788504429455/posts/1537287279812902?comment_id=1664359293772366"
                          rel="noopener noreferrer"
                          target="_blank"
                          title="https://facebook.com/657788504429455/posts/1537287279812902?comment_id=1664359293772366"
                        >
                          comment
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="text-right justify-content-center align-self-center dateTimeText pr-0 col-md-5"
              >
                <span>
                  <span
                    id="datetime-tooltip-3"
                  >
                    04/27/2021
                  </span>
                </span>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="pr-0 mt-2 col-md-12"
              >
                <span
                  class="textBlock"
                >
                  Nice post!
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responding to a Facebook comment\` event even if the payload is missing source, sender and meta data 1`] = `
<div
  class="component last"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Responding to a Facebook comment
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div>
        AgentLabel
      </div>
    </div>
    <span
      class="date text-faded"
    >
      <span
        id="datetime-tooltip-8"
      >
        04/27/2021
      </span>
    </span>
  </div>
  <div
    class="eventDetails"
  >
    <div
      class="genericCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="m-0 row"
        >
          <div
            class="avatarContainer col-md-1"
          >
            <div
              class="component square"
              style="width: 36px; height: 36px;"
            >
              <div
                class="initials"
                style="width: 36px; height: 36px; font-size: 15px;"
              >
                <span
                  style="line-height: 38px;"
                />
              </div>
            </div>
          </div>
          <div
            class="col-md-11"
          >
            <div
              class="row"
            >
              <div
                class="col-md-12"
              >
                <div
                  class="verticalCenter"
                >
                  <div
                    class="customerNameBody"
                  >
                     
                  </div>
                  <div>
                    <span
                      class="source"
                    >
                      <i
                        class="icon source-icon d-inline-block material-icons uncolored"
                      >
                        live_help
                      </i>
                    </span>
                  </div>
                  <div />
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="pr-0 mt-2 col-md-12"
              >
                <span
                  class="textBlock"
                >
                  Nice post!
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PrivateReplyEvent/> render should render a \`Responding to an Instagram comment\` event 1`] = `
<div
  class="component last"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="privateReplyEventIcon"
      >
        <img
          alt="private reply event"
          src="test-file-stub"
        />
      </div>
      <span
        class="actionName"
      >
        Responding to an Instagram comment
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div>
        AgentLabel
      </div>
    </div>
    <span
      class="date text-faded"
    >
      <span
        id="datetime-tooltip-5"
      >
        04/27/2021
      </span>
    </span>
  </div>
  <div
    class="eventDetails"
  >
    <div
      class="genericCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="m-0 row"
        >
          <div
            class="avatarContainer col-md-1"
          >
            <div
              class="component square"
              style="width: 36px; height: 36px;"
            >
              <div
                class="initials"
                style="width: 36px; height: 36px; font-size: 15px;"
              >
                <span
                  style="line-height: 38px;"
                >
                  MD
                </span>
              </div>
            </div>
          </div>
          <div
            class="col-md-11"
          >
            <div
              class="row"
            >
              <div
                class="col-md-7"
              >
                <div
                  class="verticalCenter"
                >
                  <div
                    class="customerNameBody"
                  >
                    Mehdi
                     
                    LA J
                  </div>
                  <div>
                    <span
                      class="source"
                    >
                      <i
                        class="icon source-icon d-inline-block icon-custom icon-facebook-feed uncolored"
                      />
                    </span>
                  </div>
                  <div>
                    <span
                      class="from"
                    >
                      <span
                        class="label"
                      >
                        go to
                         
                      </span>
                      <span
                        class="value"
                      >
                        <a
                          href="https://facebook.com/657788504429455/posts/1537287279812902?comment_id=1664359293772366"
                          rel="noopener noreferrer"
                          target="_blank"
                          title="https://facebook.com/657788504429455/posts/1537287279812902?comment_id=1664359293772366"
                        >
                          comment
                        </a>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="text-right justify-content-center align-self-center dateTimeText pr-0 col-md-5"
              >
                <span>
                  <span
                    id="datetime-tooltip-6"
                  >
                    04/27/2021
                  </span>
                </span>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="pr-0 mt-2 col-md-12"
              >
                <span
                  class="textBlock"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
